# netrunner-cube

./: .gitignore  dagster.yaml  pyproject.toml  schema.md
scripts/: definitions.py
scripts/defs/: assets.py  cards.sql
