[project]
name = "netrunner_cube"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.1",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
    "ruff>=0.15.11",
    "zuban>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "scripts"


